JDK-6868269 : CompileTheWorld assertion failure introduced by the reexecute bit implementation
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: hs16
  • Priority: P4
  • Status: Resolved
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2009-08-04
  • Updated: 2021-12-16
  • Resolved: 2009-08-22
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 6 JDK 7 Other
6u18Fixed 7Fixed hs16Fixed
Related Reports
Relates :  
Description
refworkload/vm/bin/java -server -javaagent:/net/smite/never/emptyagent.jar -Xss4m -verify  -XX:-ShowMessageBoxOnError -XX:+CompileTheWorld -Xbootclasspath/p:/net/vmsqe.sfbay/export/backup/testbase/CompileTheWorld/jarfiles/Dynamo4.1.0.jar

CompileTheWorld (629) : atg/servlet/pipeline/FileFinderPipelineServletBeanInfo
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/graphKit.cpp:211
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/home/cf231476/hg/6833129/src/share/vm/opto/graphKit.cpp:211), pid=15728, tid=12
#  Error: assert(ex_map->jvms()->same_calls_as(_exceptions->jvms()),"all collected exceptions must come from the same place")
#
# JRE version: 6.0_03-b05
# Java VM: OpenJDK Server VM (16.0-b06-internal-jvmg mixed mode solaris-x86 )
# An error report file with more information is saved as:
# /home/cf231476/hs_err_pid15728.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp

The reason of the assertion is that in inline native clone intrinsics, the reexecute
bit was not set for the null check at the very beginning, and then set to true for
allocation and copy. Both the null check and the later part may raise exceptions, and
thus the assertion on two exception's jvmstates will see different reexecute bits.

Comments
EVALUATION http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/fc2281ddce3c
10-08-2009

EVALUATION http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/fc2281ddce3c
05-08-2009