6868269: CompileTheWorld assertion failure introduced by the reexecute bit implementation

Improvement on reexecute implementation to fix the assertion failure

Reviewed-by: kvn, never